--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,6 +1,8 @@
 /* Footer */
 footer {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 20px;
   background-color: #35424a;
   color: #ffffff;
