Agregando botones de eliminar y editar en la tabla de categorias

--- a/src/styles/gestionCategorias.css
+++ b/src/styles/gestionCategorias.css
@@ -70,4 +70,11 @@ tbody tr:hover {
   font-size: 32px;
 }
 
+.columIconActions{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
 
